syntax = "proto3";

option csharp_namespace = "GrpcService1";

package entitlements;

service Entitlements {
  rpc IsEntitled (IsEntitledRequest) returns (IsEntitledResponse);
}

message IsEntitledRequest {
  string identifier = 1;
  string verb = 2;
  bool simulate_work = 3;
}

message IsEntitledResponse {
  bool entitled = 1;
}
